bug fix and favicon update

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/gulit.png" />
+    <link rel="icon" type="image/svg+xml" sizes="180x180" href="/src/assets/gulit.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gulit E-commerce</title>
   </head>
